# routes/userAuth.js
@@ -20,17 +20,12 @@ router.get("/myprofile", verifyUser, (req, res) => {
 // give all users without password
 router.get("/users", verifyUser, getUsers);
 
-
 router.get("/auth/google", googleAuthentication);
 router.get("/auth/github", githubAuthentication);
-router.get("/auth/facebook", facebookAuthentication);
+// router.get("/auth/facebook", facebookAuthentication);
 
 router.get("/auth/google/callback",passport.authenticate("google", { session: false }),allRedirect);
 router.get("/auth/github/callback",passport.authenticate("github", { session: false }),allRedirect);
-router.get("/auth/facebook/callback",passport.authenticate("facebook", { session: false }),allRedirect);
-
-
-
-
+// router.get("/auth/facebook/callback",passport.authenticate("facebook", { session: false }),allRedirect);
 
 export default router;
